Documentation edits made through Mintlify web editor

--- a/app-builder/builder/demo-app.mdx
+++ b/app-builder/builder/demo-app.mdx
@@ -7,8 +7,16 @@ icon: "qrcode"
 
 *Cách 1: Xem Demo App từ trang **App của tôi***
 
-* Bước 1: Người dùng di chuyển con trỏ chuột đến thiết kế muốn chọn  
-* Bước 2: Người dùng nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} /> và quét mã QR hiện lên để xem Demo
+<Steps>
+  <Step title="Người dùng di chuyển con trỏ chuột đến thiết kế muốn chọn">
+  </Step>
+
+  <Step title="Xem Demo thiết kế">
+    Người dùng nhấn vào nút <Icon icon="eye" color="#cfcfcf" size={15} /> và **quét mã QR hiện lên** để xem **Demo**.
+  </Step>
+</Steps>
+
+
 
 <Frame caption="Nút xem Demo \ Trang App của tôi ">
   <img
