--- a/app-builder/builder/deploy-app.mdx
+++ b/app-builder/builder/deploy-app.mdx
@@ -1,13 +1,24 @@
 ---
-title: 'Deploy App'
-description: 'Description of your new file.'
+title: "Deploy App"
+description: "Description of your new file."
 icon: "arrow-up-from-arc"
 ---
-## **7.2. Deploy App** 
 
-* **Bước 1:** Người dùng di chuyển con trỏ chuột đến thiết kế muốn chọn  
-* **Bước 2:** Người dùng nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} /> để xuất bản thiết kế, người dùng sẽ được điều hướng đến trang mua gói ứng dụng, tham khảo [**mục 2.2.6**](https://aiminis-organization.gitbook.io/aimini-user-manual/chuan-bi-va-thiet-ke/2.2-huong-dan-thiet-ke/2.2.6-xuat-ban-and-thanh-toan)
-* 
+## **7.2. Deploy App**
+
+<Steps>
+
+  <Step title="Người dùng di chuyển đến thiết kế muốn chọn">
+  </Step>
+
+  <Step title="Xuất bản thiết kế">
+    Người dùng nhấn vào nút <Icon icon="eye" color="#cfcfcf" size={15} /> để **xuất bản thiết kế**. Sau đó, người dùng sẽ được **điều hướng đến trang mua gói ứng dụng**.  
+    Tham khảo thêm tại [**mục 2.2.6**](https://aiminis-organization.gitbook.io/aimini-user-manual/chuan-bi-va-thiet-ke/2.2-huong-dan-thiet-ke/2.2.6-xuat-ban-and-thanh-toan).
+  </Step>
+
+</Steps>
+
+
 <Frame caption="Nút xuất bản ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image128_f9bd6d4e97.jpg"
@@ -16,4 +27,3 @@ icon: "arrow-up-from-arc"
     title=""
   />
 </Frame>
-
