--- a/app-builder/builder/pages/category-page.mdx
+++ b/app-builder/builder/pages/category-page.mdx
@@ -6,14 +6,14 @@ icon: "circle-user"
 
 ### **3.3.2.  Categories**
 
-**Bố cục**  
+**Bố cục**\
 Người dùng có thể lựa chọn các bố cục hiển thị danh mục, bao gồm: Bố cục mặc định, Bố cục dọc, Bố cục ngang, Trượt ngang, Tab danh mục, Danh sách sản phẩm, hoặc Nhóm danh mục.
 
 <Frame caption="Bố cục danh mục">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image138_a4d6946512.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
@@ -22,217 +22,578 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 
 **Thêm dữ liệu mới**
 
-- **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
+<Steps>
+  <Step title="Nhấn vào nút Thêm dữ liệu mới">
+    Người dùng nhấn vào nút **"Thêm dữ liệu mới"** để bắt đầu thêm danh mục mới.
 
-<Frame caption="Nút thêm dữ liệu">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image58_0b45699748.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Nút thêm dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image58_0b45699748.png"
+        alt="Nút thêm dữ liệu mới trong giao diện danh mục"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút thêm dữ liệu mới"
+      />
+    </Frame>
+  </Step>
+  <Step title="Nhập thông tin danh mục và chọn hình ảnh">
+    - Nhập **tên danh mục**
+    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thêm hình ảnh cho danh mục và banner danh mục
+    - Chọn **đường dẫn đến trang khác** nếu đây là danh mục liên kết đến trang cụ thể (người dùng sẽ được điều hướng đến trang đó khi nhấn vào ảnh)
+    - Hoặc chọn **đường dẫn đến danh mục sản phẩm** nếu đây là danh mục chứa các sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm tương ứng)
 
-- **Bước 2:**
-  - Người dùng nhập tên danh mục
-  - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" cho danh mục và banner danh mục
-  - Chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục)
-    - Hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
-
-<Frame caption="Thêm dữ liệu cho danh mục ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image193_6ad7dde887.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho danh mục và thêm ảnh cho banner danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+    <Frame caption="Thêm dữ liệu cho danh mục">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image193_6ad7dde887.png"
+        alt="Giao diện nhập thông tin và chọn ảnh cho danh mục"
+        style={{ borderRadius:"0.5rem" }}
+        title="Thêm dữ liệu danh mục"
+      />
+    </Frame>
+  </Step>
+  <Step title="Xác nhận thêm dữ liệu">
+    Người dùng nhấn **“Thêm dữ liệu”** để hoàn tất việc thêm danh mục và banner danh mục,\
+    hoặc nhấn **“Hủy bỏ”** để hủy thao tác.
+  </Step>
+</Steps>
 
 **Chỉnh sửa:**
-- **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để đến trang chỉnh sửa
 
-<Frame caption="Nút chỉnh sửa  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image122_2ef90432aa.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
+<Steps>
+  <Step title="Nhấn vào nút chỉnh sửa">
+    Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để mở trang chỉnh sửa danh mục.
 
-- **Bước 2:** Người dùng nhập tên danh mục, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn đường dẫn đến trang khác nếu đây là danh mục chứa các trang (người dùng sẽ được điều hướng đến trang nào khi nhấn vào ảnh này trên danh mục) hoặc chọn đường dẫn đến danh mục sản phẩm nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm nào nào khi nhấn vào ảnh này trên danh mục)
+    <Frame caption="Nút chỉnh sửa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image122_2ef90432aa.png"
+        alt="Nút chỉnh sửa danh mục trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút chỉnh sửa danh mục"
+      />
+    </Frame>
+  </Step>
+  <Step title="Chỉnh sửa thông tin danh mục">
+    - Nhập **tên danh mục**
+    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thay đổi hình ảnh danh mục và banner danh mục
+    - Chọn **đường dẫn đến trang khác** nếu đây là danh mục liên kết đến trang cụ thể (người dùng sẽ được điều hướng đến trang đó khi nhấn vào ảnh danh mục)
+    - Hoặc chọn **đường dẫn đến danh mục sản phẩm** nếu đây là danh mục chứa các danh mục sản phẩm (người dùng sẽ được điều hướng đến trang danh mục sản phẩm tương ứng)
 
-<Frame caption="Trang chỉnh sửa dữ liệu  ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image120_1cf0daec72.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh cho thẻ trong danh mục hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+    <Frame caption="Trang chỉnh sửa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image120_1cf0daec72.png"
+        alt="Giao diện chỉnh sửa dữ liệu danh mục"
+        style={{ borderRadius:"0.5rem" }}
+        title="Trang chỉnh sửa danh mục"
+      />
+    </Frame>
+  </Step>
+  <Step title="Lưu chỉnh sửa hoặc hủy thao tác">
+    Người dùng nhấn **“Lưu chỉnh sửa”** để hoàn tất cập nhật danh mục,\
+    hoặc nhấn **“Hủy bỏ”** nếu không muốn lưu thay đổi.
+  </Step>
+</Steps>
 
 **Xóa:**
-- **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
-<Frame caption="Nút xóa ">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image224_cc8180dc56.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
+<Steps>
+  <Step title="Nhấn vào nút xóa dữ liệu">
+    Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa danh mục khỏi hệ thống.
 
-- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn 'Xóa ngay" để tiến hành xóa thẻ khỏi danh mục hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+    <Frame caption="Nút xóa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image224_cc8180dc56.png"
+        alt="Nút xóa danh mục trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa danh mục"
+      />
+    </Frame>
+  </Step>
+  <Step title="Xác nhận thao tác xóa">
+    Khi hộp thoại xác nhận xuất hiện, người dùng chọn **“Xóa ngay”** để tiến hành xóa danh mục,\
+    hoặc chọn **“Hủy”** nếu không muốn thực hiện thao tác này.
+  </Step>
+</Steps>
 
 **Tiêu đề**
 
 **Nền**
-- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
+- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image249_4f9b0222d5.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Bật/tắt có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Hiển thị tiêu đề:**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "Danh mục" thì phần tử danh mục sẽ như thế này
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "Danh mục" thì phần tử danh mục sẽ như thế này
 
 <Frame caption="Tiêu đề danh mục  ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image136_9047a19af9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
 **Cỡ chữ:**
-- Người dùng có thể điều chỉnh cỡ chữ cho tiêu đề của danh mục tại ![][image100]
+
+- Người dùng có thể điều chỉnh cỡ chữ cho tiêu đề của danh mục tại
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image250_6fe411e83b.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Màu chữ:**
-- Người dùng có thể thay đổi màu chữ cho tiêu đề của danh mục tại ![][image101]
+
+- Người dùng có thể thay đổi màu chữ cho tiêu đề của danh mục tại
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image251_3a3e6062bf.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Hiển thị icon:**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon và không có hiển thị icon
 
-**Dan mục chính**
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt có hiển thị icon và không có hiển thị icon
+
+**Danh mục chính**
 
 **Nền**
-- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
+- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image252_677543a21f.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Nhấn biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để ẩn hoặc hiển thị hiệu ứng bóng
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Hiển thị icon/ hình ảnh**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị icon/ hình ảnh và không có hiển thị icon/ hình ảnh
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt trạng thái trạng thái có hiển thị icon/hình ảnh và không có hiển thị icon/ hình ảnh
 
 **Hiển thị tên danh mục**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị tên danh mục và không có hiển thị tên danh mục
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt trạng thái có hiển thị tên danh mục và không có hiển thị tên danh mục
 
 **Kích thước/ Màu sắc**
-- Người dùng có thể nhập hoặc tăng/giảm kích thước danh mục ![][image103] và thay đổi màu sắc danh mục ![][image104]
+
+- Người dùng có thể nhập hoặc tăng/giảm kích thước danh mục  và thay đổi màu sắc danh mục
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image254_12a3c3b2c0.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Hiển thị danh mục phụ**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị danh mục phụ và không có hiển thị danh mục phụ.
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt trạng thái có hiển thị danh mục phụ và không có hiển thị danh mục phụ.
 
 **Danh mục phụ**
 
 **Hiển thị tên**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị tên danh mục phụ và không có hiển thị tên danh mục phụ.
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt trạng thái có hiển thị tên danh mục phụ và không có hiển thị tên danh mục phụ.
 
 **Hiển thị hình ảnh**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị hình ảnh danh mục phụ và không có hiển thị hình ảnh danh mục phụ.
+
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt trạng thái có hiển thị hình ảnh danh mục phụ và không có hiển thị hình ảnh danh mục phụ.
 
 **Banner**
 
 **Hiển thị banner**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có hiển thị banner và không có hiển thị banner.
 
-**Chiều cao**  
-Người dùng có thể chọn hoặc tăng/giảm chiều cao của banner tại ![][image105]
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt trạng thái có hiển thị banner và không có hiển thị banner.
+
+**Chiều cao**
+
+- Người dùng có thể chọn hoặc tăng/giảm chiều cao của banner tại
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image253_3d68c384bc.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Lề ngoài**
-- Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút ![][image59] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]
-- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút ![][image61] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]
+
+- Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa phần tử và các phần khác trên trang nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Người dùng muốn **chỉnh khoảng cách trái – phải** của phần tử nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Lề trong**
-- Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút ![][image63] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]
-- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút ![][image65] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]
+- Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa nội dung bên trong phần tử và viền của phần tử nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Người dùng muốn **chỉnh khoảng cách trái – phải** bên trong phần tử nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Bo góc**
-- Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập ![][image70] hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]
 
+- Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của header tại ô nhập
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 **Viền**
-- Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập ![][image72]
-- Chọn màu cho viền bằng cách nhấn ô vuông ![][image73] sau đó chọn màu
+- Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
 - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Đổ bóng**
-- Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô ![][image76]
-- Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77] sau đó chọn màu
+
+- Người dùng có thể chọn độ lớn đổ bóng của header tại ô
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
 - Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 
 **Thẻ sản phẩm**
 
 **Lề ngoài**
-- Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ với các thẻ khác bằng nút ![][image59] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image60]
-  - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ với các thẻ khác bằng nút ![][image61] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image62]
+
+- Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa phần tử và các phần khác trên trang nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Người dùng muốn **chỉnh khoảng cách trái – phải** của phần tử nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Lề trong**
-- Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa lề các thẻ bằng nút ![][image63] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image64]
-- Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa lề các thẻ bằng nút ![][image65] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image66]
+- Người dùng muốn **chỉnh khoảng cách trên – dưới** giữa nội dung bên trong phần tử và viền của phần tử nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Người dùng muốn **chỉnh khoảng cách trái – phải** bên trong phần tử nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Nếu muốn **chỉnh riêng từng bên trái hoặc phải** ,**chỉnh riêng lề trên hoặc lề dưới**, nhấn nút.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-**Kích thước**  
-Người dùng có thể điều chỉnh kích thước cho tiêu đề của thẻ sản phẩm tại ![][image106]
 
-**Kiểu hình ảnh**  
-Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
+**Kích thước**
+Người dùng có thể điều chỉnh kích thước cho tiêu đề của thẻ sản phẩm tại 
 
-**Nền**
-- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Kiểu hình ảnh**
+Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại 
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Nền**
+  - Chọn màu nền cho header bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Bật/tắt có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Bo góc**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các thẻ tại ô nhập ![][image70] hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút ![][image71]
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của header tại ô nhập
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
 - **Viền**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các thẻ tại ô nhập ![][image72]
-  - Chọn màu cho viền bằng cách nhấn ô vuông ![][image73] sau đó chọn màu
+  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của header tại ô nhập
+  
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+  - Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
   - Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Đổ bóng**
-  - Người dùng có thể chọn độ lớn đổ bóng của các thẻ tại ô ![][image76]
-  - Chọn màu cho đổ bóng bằng cách nhấn ô vuông ![][image77] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có đổ bóng và không đổ bóng bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+  - Người dùng có thể chọn độ lớn đổ bóng của header tại ô
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Nhấn biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để ẩn hoặc hiển thị hiệu ứng bóng.
+- Xóa đồ bóng bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
 
 **Hiển thị tên sản phẩm:**
-- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tên sản phẩm và không có tên sản phẩm
-  - **Hiển thị danh mục:**
-    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục
-  - **Hiển thị giá tiền:**
-    - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại ![][image110]
-  - **Hiển thị giá giảm:**
-    - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc ![][image111]
-  - **Sản phẩm Sale:**
-    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có sản phẩm sale và không có sản phẩm sale
-  - **Hiển thị nhãn:**
-    - Người dùng chọn không hiển thị nhãn ![][image113] hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.
-  - **Hiển thị yêu thích:**
-    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút yêu thích và không có nút yêu thích
-  - **Hiển thị đánh giá**
-    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có số sao đánh giá và không có số sao đánh giá
-  - **Hiển thị số lượng yêu thích**
-    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có số lượng yêu thích và không có số lượng yêu thích
-  - **Hiển thị số lượng đã bán:**
-    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có số lượng đã bán và không có số lượng đã bán
-  - **Hiển thị giỏ hàng:**
-    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng.
 
-**Kiểu nút giỏ hàng:**  
-Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
+- Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt các mục **Tên sản phẩm**, **Danh mục**, **Sản phẩm sale**, **Yêu thích**, **Đánh giá**, **Số lượt yêu thích**, **Số lượng đã bán** và **Giỏ hàng**.
+- Chọn kiểu hiển thị cho Giá tiền tại
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+- Chọn kiểu hiển thị cho Giá giảm tại 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
-**Kiểu thẻ sản phẩm:**  
-Người dùng có thể chọn chuyển đổi hiển thị sản phẩm giữa ngang hoặc dọc ![][image119]
+- Người dùng chọn hiển thị nhãn FlashSale, Bán chạy, Mới nhất hoặc chọn ẩn nhãn tại.
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+**Kiểu nút giỏ hàng:**
+  - Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button 
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Kiểu thẻ sản phẩm:**
+
+ - Người dùng có thể chọn chuyển đổi hiển thị sản phẩm giữa ngang hoặc dọc 
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
