--- a/app-builder/builder/pages/flashsale-page.mdx
+++ b/app-builder/builder/pages/flashsale-page.mdx
@@ -6,14 +6,14 @@ icon: "circle-user"
 
 ## **6.3. FlashSale**
 
-**Bố cục**  
+**Bố cục**\
 Người dùng có thể lựa chọn các bố cục hiển thị danh mục, bao gồm: Đơn giản, Danh sách, Cá tính.
 
 <Frame caption="Bố cục Flashsale">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
@@ -22,79 +22,112 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 
 **Thêm dữ liệu mới**
 
-- **Bước 1**: Người dùng nhấn vào nút "Thêm dữ liệu mới"
+<Steps>
+  <Step title="Nhấn vào nút Thêm dữ liệu mới">
+    Người dùng nhấn vào nút **"Thêm dữ liệu mới"** để bắt đầu thêm chương trình flashsale.
 
-<Frame caption="Nút thêm dữ liệu">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image30_6567c89508.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
+    <Frame caption="Nút thêm dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image30_6567c89508.png"
+        alt="Nút thêm dữ liệu mới trong giao diện Flashsale"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút thêm dữ liệu Flashsale"
+      />
+    </Frame>
+  </Step>
+  <Step title="Nhập thông tin chương trình Flashsale">
+    - Nhập **tên chương trình**
+    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thêm hình ảnh banner
+    - Chọn **chương trình sử dụng**
 
-- **Bước 2:**
-  - Người dùng nhập tên chương trình
-  - Người dùng nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" cho banner
-  - Chọn chương trình sử dụng
-
-<Frame caption="Thêm dữ liệu Flashsale">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image194_63f0013b9a.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- **Bước 3**: Người dùng nhấn "Thêm dữ liệu" để tiến hành thêm ảnh cho hoặc nhấn "Hủy bỏ" để hủy quá trình thêm dữ liệu
+    <Frame caption="Thêm dữ liệu Flashsale">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image194_63f0013b9a.png"
+        alt="Giao diện thêm dữ liệu Flashsale"
+        style={{ borderRadius:"0.5rem" }}
+        title="Thêm dữ liệu Flashsale"
+      />
+    </Frame>
+  </Step>
+  <Step title="Xác nhận thêm dữ liệu">
+    Người dùng nhấn **“Thêm dữ liệu”** để hoàn tất việc thêm chương trình,\
+    hoặc nhấn **“Hủy bỏ”** để hủy thao tác.
+  </Step>
+</Steps>
 
 **Chỉnh sửa:**
-- **Bước 1:** Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} />
- để đến trang chỉnh sửa
 
-<Frame caption="Nút chỉnh sửa">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image22_4538fa35d5.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
+<Steps>
+  <Step title="Nhấn vào nút chỉnh sửa">
+    Người dùng nhấn vào nút <Icon icon="pencil" color="#cfcfcf" size={15} /> để mở trang chỉnh sửa chương trình flashsale.
 
-- **Bước 2:** Người dùng nhập tên chương trình, nhấn "Tải ảnh lên hoặc chọn ảnh từ thư viện" và chọn chương trình áp dụng
+    <Frame caption="Nút chỉnh sửa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image22_4538fa35d5.png"
+        alt="Nút chỉnh sửa chương trình Flashsale trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút chỉnh sửa Flashsale"
+      />
+    </Frame>
+  </Step>
+  <Step title="Chỉnh sửa thông tin chương trình">
+    - Nhập **tên chương trình**
+    - Nhấn **“Tải ảnh lên hoặc chọn ảnh từ thư viện”** để thay đổi hình ảnh banner
+    - Chọn **chương trình áp dụng**
 
-<Frame caption="Trang chỉnh sửa dữ liệu">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image119_37596fa0f5.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- **Bước 3**: Người dùng nhấn "Lưu chỉnh sửa" để tiến hành chỉnh sửa ảnh hoặc nhấn "Hủy bỏ" để hủy quá trình chỉnh sửa dữ liệu
+    <Frame caption="Trang chỉnh sửa dữ liệu">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image119_37596fa0f5.png"
+        alt="Giao diện chỉnh sửa chương trình Flashsale"
+        style={{ borderRadius:"0.5rem" }}
+        title="Trang chỉnh sửa Flashsale"
+      />
+    </Frame>
+  </Step>
+  <Step title="Lưu chỉnh sửa hoặc hủy thao tác">
+    Người dùng nhấn **“Lưu chỉnh sửa”** để hoàn tất cập nhật chương trình,\
+    hoặc nhấn **“Hủy bỏ”** để hủy thao tác chỉnh sửa.
+  </Step>
+</Steps>
 
 **Xóa:**
-- **Bước 1:** Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa dữ liệu
 
-<Frame caption="Nút xóa">
-  <img
-    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image199_72108dc338.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-    title=""
-  />
-</Frame>
+<Steps>
+  <Step title="Nhấn vào nút xóa dữ liệu">
+    Người dùng nhấn vào nút <Icon icon="minus" color="#cfcfcf" size={15} /> để xóa chương trình flashsale.
 
-- **Bước 2:** Tại hộp thông báo hiện lên, người dùng nhấn "Xóa ngay" để tiến hành xóa hoặc nhấn "Hủy" để hủy quá trình xóa dữ liệu
+    <Frame caption="Nút xóa">
+      <img
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image199_72108dc338.png"
+        alt="Nút xóa chương trình Flashsale trong giao diện quản lý"
+        style={{ borderRadius:"0.5rem" }}
+        title="Nút xóa Flashsale"
+      />
+    </Frame>
+  </Step>
+  <Step title="Xác nhận thao tác xóa">
+    Khi hộp thoại xuất hiện, người dùng chọn **“Xóa ngay”** để tiến hành xóa chương trình,\
+    hoặc chọn **“Hủy”** nếu không muốn thực hiện thao tác này.
+  </Step>
+</Steps>
 
 **Tiêu đề**
 
 **Nền**
-- Chọn màu nền cho tiêu đề flashsale bằng cách nhấn ô vuông ![][image67] sau đó chọn màu
-  - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-  - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
+
+- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
+- Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Hiển thị tiêu đề:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có tiêu đề và không có tiêu đề, ngoài ra người dùng có thể nhập tiêu đề cho phần tử danh mục. Ví dụ, nếu tiêu đề là "F⚡ash Sale" thì phần tử danh mục sẽ như thế này
 
@@ -102,7 +135,7 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image95_4af11967a4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
+    style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
@@ -113,13 +146,34 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
 **Bộ đếm giờ**
 
 **Hiển thị bộ đếm giờ:**
+
 - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có bộ đếm giờ và không có bộ đếm giờ
   - **Nền:**
-    - Người dùng có thể điều chỉnh màu sắc cho nền bộ đếm giờ của flashsale tại ![][image373]
-  - **Kích thước/ Màu sắc:**
-    - Người dùng có thể điều chỉnh kích thước và màu sắc cho bộ đếm giờ của flashsale tại ![][image82]
+    - Người dùng có thể điều chỉnh màu sắc cho nền bộ đếm giờ của flashsale tại
+
+<Frame caption="Bố cục Flashsale">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- **Kích thước/ Màu sắc:**
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho bộ đếm giờ của flashsale tại
+
+<Frame caption="Bố cục Flashsale">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Thẻ sản phẩm**
+
 - **Lề ngoài**
   - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image133] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image134]
   - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với phần danh sách sản phẩm bằng nút ![][image135] tại phần **Lề ngoài**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image136]
@@ -127,13 +181,31 @@ Người dùng có thể lựa chọn các bố cục hiển thị danh mục, b
   - Người dùng điều chỉnh chung khoảng cách giữa lề trên và dưới giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image137] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image138]
   - Người dùng điều chỉnh khoảng cách giữa lề trái và phải giữa các thẻ sản phẩm với các thành phần bên trong thẻ bằng nút ![][image139] tại phần **Lề trong**, ngoài ra người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút ![][image140]
 - **Kích thước**
-  - Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại ![][image331]
+  - Người dùng có thể chọn hoặc tăng/giảm kích thước của các thẻ sản phẩm tại
 
-**Kiểu hình ảnh**  
-Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại ![][image107]
+<Frame caption="Bố cục Flashsale">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+**Kiểu hình ảnh** Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại
+
+<Frame caption="Bố cục Flashsale">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image79_46cff84d22.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Nền**
-- Chọn màu nền cho thẻ sản phẩm bằng cách nhấn ô vuông ![][image120] sau đó chọn màu
+
+- Chọn màu nền cho các thẻ bằng cách nhấn ô vuông sau đó chọn màu
   - Chuyển đổi qua lại giữa 2 trạng thái có màu nền và không có màu nền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
   - Xóa màu nền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
 - **Bo góc**
@@ -171,5 +243,15 @@ Người dùng có thể chọn kiểu hình ảnh các thẻ sản phẩm tại
 - **Hiển thị nút giỏ hàng:**
   - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có nút thêm vào giỏ hàng và không có nút thêm vào giỏ hàng
 
-**Kiểu nút giỏ hàng**  
-Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button ![][image118]
+**Kiểu nút giỏ hàng**
+
+Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button
+
+<Frame caption>
+  <img
+    src=""
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
