--- a/app-builder/builder/pages/home.mdx
+++ b/app-builder/builder/pages/home.mdx
@@ -214,7 +214,15 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
 </Frame>
 
 - **Kích thước/ Màu sắc:**
-  - Người dùng có thể điều chỉnh kích thước và màu sắc cho phụ đề của header tại ![][image82]
+  - Người dùng có thể điều chỉnh kích thước và màu sắc cho phụ đề của header tại
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image248_ec7e664c78.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - **Hiển thị biểu tượng**
   - Người dùng gạt nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để bật/tắt tính năng **Logo, Giỏ hàng, Tin nhắn, Tìm kiếm, Thông báo**.
 
